--- a/public/nicolas/nicolas-resume.css
+++ b/public/nicolas/nicolas-resume.css
@@ -1,26 +1,120 @@
-main {
-  background-color: #d1cdcd;
+html {
+  font-size: 62.5%;
 }
 
-.page {
+body {
+  font-size: 1.6rem;
+  font-family: 'Roboto', sans-serif;
+}
+
+div.cv-page {
+  max-width: 1100px;
+  margin: 40px auto 0;
+  padding: 0 40px;
+}
+
+header h1 {
+  text-transform: uppercase;
+  font-family: 'Roboto Slab', serif;
+  font-weight: bolder;
+  font-size: 3rem;
+  //background-color: yellow;
+}
+
+header .title {
+  font-size: 1.5rem;
+  font-weight: bold;
+  margin-top: -10px;
+  color: #0063b1;
+}
+
+header ul {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  margin-top: 20px;
+  padding: 0;
+  font-size: 1.2rem;
+  align-items: center;
+}
+
+header li {
+  list-style-type: none;
+  margin-right: 10px;
+  display: flex;
+  width: 24%;
+  justify-content: center;
+}
+header li svg {
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+  stroke: #0063b1;
+}
+header li:first-of-type {
+  justify-content: flex-start;
+}
+
+header li:last-of-type {
+  justify-content: flex-end;
+}
+
+main {
+  /*background-color: #d1cdcd;*/
+}
+
+.main-container.page {
   display: flex;
   width: 100%;
   height: 100vh;
-  padding: 20px;
-  box-sizing: border-box;
+  margin-top: 40px;
+}
+
+.content {
+  width: 70%;
+}
+
+h2 {
+  font-size: 2.8rem;
+  text-transform: uppercase;
+  border-bottom: 5px solid #333;
+  padding-bottom: 0;
+  margin-bottom: 0;
+}
+
+ul {
+  padding-left: 1.3rem;
+  margin: 0;
+}
+
+.project {
+  margin: 20px 0 40px;
+}
+
+.project-precisions {
+  display: flex;
+  gap: 20px;
+}
+
+.project-dates,
+.project-location {
+  display: flex;
+  font-size: 1.2rem;
+}
+.project-dates svg,
+.project-location svg {
+  color: #0063b1;
+  width: 16px;
+  height: 16px;
+  margin-right: 5px;
+}
+
+.project p {
+  margin: 20px 0;
 }
 
 aside.sidebar {
   width: 30%;
   padding: 10px;
   background-color: #f3f3f3;
-}
-
-.content {
-  width: 70%;
-  padding: 10px;
-}
-
-.project {
-  margin: 40px 0;
 }
