--- a/public/nicolas/nicolas-resume.css
+++ b/public/nicolas/nicolas-resume.css
@@ -66,7 +66,7 @@ main {
 .main-container.page {
   display: flex;
   width: 100%;
-  height: 100vh;
+  /*height: 100vh;*/
   margin-top: 40px;
 }
 
@@ -87,22 +87,28 @@ ul {
   margin: 0;
 }
 
-.project {
+.project,
+.item {
   margin: 20px 0 40px;
 }
 
-.project-precisions {
+.project-precisions,
+.item-precisions {
   display: flex;
   gap: 20px;
 }
 
 .project-dates,
-.project-location {
+.project-location,
+.item-dates,
+.item-location {
   display: flex;
   font-size: 1.2rem;
 }
 .project-dates svg,
-.project-location svg {
+.project-location svg,
+.item-dates svg,
+.item-location svg {
   color: #0063b1;
   width: 16px;
   height: 16px;
@@ -114,7 +120,28 @@ ul {
 }
 
 aside.sidebar {
+  margin-left: 10px;
+  padding: 0 10px;
   width: 30%;
-  padding: 10px;
   background-color: #f3f3f3;
+}
+
+aside section {
+  margin-bottom: 20px;
+}
+
+aside h3 {
+  margin-top: 20px;
+}
+
+aside ul {
+  margin: 5px 0 0 0;
+  list-style: none;
+  display: flex;
+  flex-wrap: wrap;
+}
+
+aside li {
+  margin: 5px 10px 5px 0;
+  border-bottom: 2px solid #333;
 }
