--- a/public/nicolas/nicolas-resume.css
+++ b/public/nicolas/nicolas-resume.css
@@ -24,18 +24,19 @@ header h1 {
 header .title {
   font-size: 1.5rem;
   font-weight: bold;
-  margin-top: -10px;
+  margin-top: -8px;
   color: #0063b1;
 }
 
 header .second-title {
-  margin-top: -2px;
+  margin-top: 0;
 }
 
 header ul {
   display: flex;
   justify-content: space-between;
-  flex-wrap: wrap;
+  gap: 10px;
+  /*flex-wrap: wrap;*/
   margin-top: 10px;
   padding: 0;
   font-size: 1.2rem;
@@ -44,9 +45,7 @@ header ul {
 
 header li {
   list-style-type: none;
-  margin-right: 10px;
   display: flex;
-  width: 24%;
   justify-content: center;
 }
 header li svg {
@@ -147,5 +146,5 @@ aside ul {
 
 aside li {
   margin: 5px 10px 5px 0;
-  border-bottom: 2px solid #333;
+  border-bottom: 1px solid #555;
 }
