feat: about update

--- a/src/styles/theme/Link.module.scss
+++ b/src/styles/theme/Link.module.scss
@@ -47,7 +47,8 @@
 .shyLink{
   @include any-link;
   text-transform: uppercase;
-  color: $shyLink;
+  color: black;
+  font-weight: bold;
   &:hover {
     color: $overShyLink;
   }
