fix: good card component, header and site title

--- a/src/styles/framework/_spacing.scss
+++ b/src/styles/framework/_spacing.scss
@@ -121,6 +121,13 @@ hr {
 .m-40 {
   margin: 40px;
 }
+.mr-20 {
+  margin-right: 20px;
+}
+
+.mr-40 {
+  margin-right: 20px;
+}
 
 .mt-20 {
   margin-top: 20px;
